# shortcut-cli

./: .gitignore  CONTRIBUTORS  Cargo.toml  LICENSE  Makefile  README.md  cargo-requirements.txt  config.yml.example
.rpm/: shortcut-cli.spec
darwin-build/resources/: conclusion.html  postinstall  welcome.html
scripts/: bootstrap.sh  darwin-package.sh
src/: error.rs  kvs.rs  lib.rs  log.rs  macro_commands.rs  macro_hub.rs  main.rs  utils.rs
tests/: tests.rs
