[package]
name = "shortcut-cli"
version = "1.0.0"
authors = ["Cuong Le <metacuong@gmail.com>"]
edition = "2018"
description = """\
A simple shortcut cli to create a script as a short macro command in linux and darwin.
"""
license = "BSD"

[package.metadata.deb]
maintainer = "Cuong Le <metacuong@gmail.com>"
copyright = "2019, Cuong Le <metacuong@gmail.com>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/shortcut-cli", "usr/bin/", "755"],
]

[package.metadata.rpm]
cargo = { buildflags = ["--release"] }
targets = { shortcut-cli = { path = "/usr/bin/shorcut-cli" } }

[dependencies]
structopt = "0.2"
slog = "2.5"
slog-term = "2.4"
slog-async = "2.3"
config = "0.9"
dirs = "2.0"
sled = "0.24"
colored = "1.8"
lazy_static = "1.3"
reqwest = "0.9"
yaml-rust = "0.4"
regex = "1.2"
